fix(style): fix mobile overflow bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,7 @@
   flex-direction: column;
   padding-left: 1rem;
   padding-right: 1rem;
+  width: 100%;
   min-width: 0;
   max-width: 48.75rem;
   margin-left: auto;
